implemented "see also" functionality by generating list of pages that has a specific combination of tags

--- a/_data/tag/ct.yml
+++ b/_data/tag/ct.yml
@@ -16,7 +16,7 @@
 - name:  Whole brain connectivity and network analysis
   link:  /tutorial/networkanalysis
 
-- name:  Introduction
+- name:  Introduction in dealing with artifacts
   link:  /tutorial/artifacts
 
 - name: 
