--- a/_data/tag/artifact.yml
+++ b/_data/tag/artifact.yml
@@ -4,7 +4,7 @@
 - name:  Extracting the brain state and events from continuous sleep EEG
   link:  /tutorial/sleep
 
-- name:  Introduction
+- name:  Introduction in dealing with artifacts
   link:  /tutorial/artifacts
 
 - name: 
