--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -25,7 +25,7 @@
 - name:  Time-frequency analysis using Hanning window, multitapers and wavelets
   link:  /tutorial/timefrequencyanalysis
 
-- name:  Introduction
+- name:  Introduction in dealing with artifacts
   link:  /tutorial/artifacts
 
 - name:  Introduction to the FieldTrip toolbox
