--- a/_data/tag/human.yml
+++ b/_data/tag/human.yml
@@ -1,6 +1,6 @@
 - name:  Analysis of human ECoG and sEEG recordings
   link:  /tutorial/human_ecog
 
-- name: 
+- name:  Human ECoG
   link:  /getting_started/human_ecog
 
