--- a/_data/tag/realtime.yml
+++ b/_data/tag/realtime.yml
@@ -64,7 +64,7 @@
 - name:  Emotiv neuroheadset
   link:  /development/realtime/emotiv
 
-- name:  TOBI
+- name:  TOBI - Tools for Brain-Computer Interaction
   link:  /development/realtime/tobi
 
 - name:  Jinga-Hi
