--- a/_data/tag/toolbox.yml
+++ b/_data/tag/toolbox.yml
@@ -1,4 +1,4 @@
-- name: 
+- name:  MATLAB and external requirements
   link:  /faq/requirements
 
 - name:  Which external toolboxes are used by FieldTrip?
