--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -43,7 +43,7 @@
 - name:  Time-frequency analysis using Hanning window, multitapers and wavelets
   link:  /tutorial/timefrequencyanalysis
 
-- name:  Introduction in dealing with artifacts
+- name:  Introduction - dealing with artifacts
   link:  /tutorial/artifacts
 
 - name:  Event related averaging and MEG planar gradient
@@ -54,9 +54,6 @@
 
 - name:  Preprocessing - Reading continuous EEG data
   link:  /tutorial/continuous
-
-- name: 
-  link:  /tutorial/sleep_analysis
 
 - name:  Preprocessing and event-related activity in combined MEG/EEG data
   link:  /tutorial/natmeg/preprocessing
