--- a/_data/tag/workshop.yml
+++ b/_data/tag/workshop.yml
@@ -1,3 +1,6 @@
+- name:  Toolkit of Cognitive Neuroscience - EEG/MEG
+  link:  /workshop/nijmegen2014
+
 - name:  Realtime MEG BCI hands-on session in Nijmegen
   link:  /workshop/realtime
 
