--- a/_data/tag/ieeg.yml
+++ b/_data/tag/ieeg.yml
@@ -7,6 +7,6 @@
 - name:  Getting started with BioImage Suite
   link:  /getting_started/bioimage
 
-- name: 
+- name:  Human ECoG
   link:  /getting_started/human_ecog
 
