added the most recent changes from the wiki, removed the footer as it was overlapping with the text, updated CHANGES

--- a/_data/tag/bids.yml
+++ b/_data/tag/bids.yml
@@ -1,3 +1,6 @@
+- name:  How should I specify the coordinate systems in a BIDS dataset?
+  link:  /faq/bids_coordsystem
+
 - name:  Preparing a combined MEG/fMRI dataset for sharing
   link:  /example/bids
 
