--- a/_data/tag/video.yml
+++ b/_data/tag/video.yml
@@ -1,14 +1,14 @@
-- name:  FieldTrip MEG/EEG workshop at NatMEG, Stockholm (October 2014)
-  link:  /video/stockholm2014q3
-
 - name:  FieldTrip workshop for the Human Connectome project at Washington University, St. Louis (2011)
   link:  /video/stlouis2011
+
+- name:  FieldTrip/MNE workshop at NatMEG, Stockholm (January 2014)
+  link:  /video/stockholm2014
 
 - name:  Workshop at BRAMS Institute, Montreal (2012)
   link:  /video/montreal2012
 
-- name:  FieldTrip/MNE workshop at NatMEG, Stockholm (January 2014)
-  link:  /video/stockholm2014q1
+- name:  FieldTrip MEG/EEG workshop at NatMEG, Stockholm (October 2014)
+  link:  /video/natmeg
 
 - name:  Guidelines for audio and video material
   link:  /development/guidelines/video
