--- a/_data/tag/ant.yml
+++ b/_data/tag/ant.yml
@@ -1,6 +1,6 @@
 - name:  ANT NeuroSDK
   link:  /development/realtime/neurosdk
 
-- name:  Getting started with asa and eeprobe data
+- name:  Getting started with ASA and EEProbe
   link:  /getting_started/antneuro
 
