--- a/_data/tag/asa.yml
+++ b/_data/tag/asa.yml
@@ -1,3 +1,3 @@
-- name:  Getting started with asa and eeprobe data
+- name:  Getting started with ASA and EEProbe
   link:  /getting_started/antneuro
 
