--- a/_data/tag/raw.yml
+++ b/_data/tag/raw.yml
@@ -37,11 +37,11 @@
 - name:  How can I read corrupted (unsaved) CTF data?
   link:  /faq/how_can_i_read_corrupted_unsaved_ctf_data
 
-- name:  What kind of dataformats can I read in?
-  link:  /faq/what_kind_of_dataformats_can_i_read_in
-
 - name:  How can I anonymize or deidentify a CTF dataset?
   link:  /faq/how_can_i_anonymize_a_ctf_dataset
+
+- name:  What dataformats are supported?
+  link:  /faq/dataformat
 
 - name:  How can I fix a corrupt CTF res4 header file?
   link:  /faq/how_can_i_fix_a_corrupt_ctf_res4_header_file
@@ -63,9 +63,6 @@
 
 - name:  Making your own trialfun for conditional trial definition
   link:  /example/making_your_own_trialfun_for_conditional_trial_definition
-
-- name:  Supported data formats
-  link:  /dataformat
 
 - name:  FieldTrip Walkthrough
   link:  /walkthrough
