only show page TOC for level 2 and up

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,9 @@ defaults:
     values:
       layout: "default"
       toc: true
+toc:
+  min_level: 2 # default: 1
+  max_level: 4 # default: 6
 
 permalink: pretty
 markdown: kramdown
