--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,10 @@ toc:
 
 permalink: pretty
 markdown: kramdown
+highlighter: rouge
+kramdown:
+  syntax_highlighter_opts:
+    default_lang: matlab
 plugins:
   - jekyll-last-modified-at
   - jekyll-toc          # https://github.com/toshimaru/jekyll-toc
