--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -40,8 +40,8 @@
 - name:  Dipole fitting of combined MEG/EEG data
   link:  /tutorial/natmeg/dipolefitting
 
-- name:  Description of the NatMEG dataset
-  link:  /tutorial/natmeg/dataset
+- name:  Details of the auditory oddball MEG dataset
+  link:  /tutorial/natmeg/meg_audodd
 
 - name:  Preprocessing and event-related activity in combined MEG/EEG data
   link:  /tutorial/natmeg/statistics
