--- a/_data/tag/mmfaces.yml
+++ b/_data/tag/mmfaces.yml
@@ -10,3 +10,6 @@
 - name:  FieldTrip connectivity demo
   link:  /workshop/meg-uk-2015/fieldtrip-connectivity-demo
 
+- name:  Details on the multimodal faces dataset
+  link:  /tutorial/mmfaces
+
