--- a/_data/tag/workshop.yml
+++ b/_data/tag/workshop.yml
@@ -1,3 +1,6 @@
+- name:  Can I organize my own FieldTrip workshop?
+  link:  /faq/can_i_organize_my_own_workshop
+
 - name:  How should I prepare for the upcoming FieldTrip workshop?
   link:  /faq/how_should_i_prepare_for_the_upcoming_fieldtrip_workshop
 
