--- a/_data/tag/continuous.yml
+++ b/_data/tag/continuous.yml
@@ -1,3 +1,12 @@
 - name:  How can I do time-frequency analysis on continuous data?
   link:  /faq/how_can_i_do_time-frequency_analysis_on_continuous_data
 
+- name:  How can I process continuous data without triggers?
+  link:  /faq/how_can_i_process_continuous_data_without_triggers
+
+- name:  Extracting the brain state and events from continuous sleep EEG
+  link:  /tutorial/sleep
+
+- name:  Preprocessing - Reading continuous EEG data
+  link:  /tutorial/continuous
+
