--- a/_data/tag/development.yml
+++ b/_data/tag/development.yml
@@ -88,6 +88,6 @@
 - name:  Contribute
   link:  /contribute
 
-- name:  Recent improvements to the code
+- name:  Development
   link:  /development
 
