--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -58,6 +58,9 @@
 - name:  How to coregister an anatomical MRI with the gradiometer or electrode positions?
   link:  /faq/how_to_coregister_an_anatomical_mri_with_the_gradiometer_or_electrode_positions
 
+- name:  Which datasets are used in the documentation and where are they used?
+  link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
+
 - name:  Getting started with BabySQUID data
   link:  /getting_started/babysquid
 
