--- a/_data/tag/spike.yml
+++ b/_data/tag/spike.yml
@@ -1,6 +1,9 @@
 - name:  Spike and LFP dataformats
   link:  /dataformat/spike
 
+- name:  Which datasets are used in the documentation and where are they used?
+  link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
+
 - name:  Working with animal electrophysiology data
   link:  /getting_started/animal
 
