--- a/_data/tag/timelock.yml
+++ b/_data/tag/timelock.yml
@@ -31,3 +31,6 @@
 - name:  Sensor-level ERF, TFR and connectivity analyses
   link:  /tutorial/sensor_analysis
 
+- name:  Getting started with EEG data, quality checks and ERPs
+  link:  /workshop/madrid2019/tutorial_erp
+
