--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -145,3 +145,6 @@
 - name:  Visual artifact rejection
   link:  /tutorial/visual_artifact_rejection
 
+- name:  Getting started with EEG data, quality checks and ERPs
+  link:  /workshop/madrid2019/tutorial_erp
+
