--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -178,6 +178,9 @@
 - name:  Getting started with EEG data, quality checks and ERPs
   link:  /workshop/madrid2019/tutorial_erp
 
+- name:  Time-frequency and spectral analysis
+  link:  /workshop/madrid2019/tutorial_freq
+
 - name:  Cluster-based permutation tests on resting-state Power Spectral Density
   link:  /workshop/madrid2019/tutorial_stats
 
