--- a/_data/tag/madrid2019.yml
+++ b/_data/tag/madrid2019.yml
@@ -4,7 +4,7 @@
 - name:  Getting started with EEG data, quality checks and ERPs
   link:  /workshop/madrid2019/tutorial_erp
 
-- name:  Frequency analysis of task and resting state EEG
+- name:  Time-frequency and spectral analysis
   link:  /workshop/madrid2019/tutorial_freq
 
 - name:  Cluster-based permutation tests on resting-state Power Spectral Density
