--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -148,3 +148,6 @@
 - name:  Getting started with EEG data, quality checks and ERPs
   link:  /workshop/madrid2019/tutorial_erp
 
+- name:  Time-frequency and spectral analysis
+  link:  /workshop/madrid2019/tutorial_freq
+
