--- a/_data/tag/guidelines.yml
+++ b/_data/tag/guidelines.yml
@@ -5,7 +5,7 @@
   link:  /development/guideline/documentation
 
 - name:  Guidelines
-  link:  /development/guidelines
+  link:  /development/guideline
 
 - name:  Template guidelines
   link:  /development/guideline/templates
