--- a/_data/tag/eeg-language.yml
+++ b/_data/tag/eeg-language.yml
@@ -7,6 +7,9 @@
 - name:  Details on the EEG language dataset
   link:  /workshop/madrid2019/eeg_language
 
+- name:  FieldTrip workshop in Madrid
+  link:  /workshop/madrid2019
+
 - name:  Getting started with EEG data, quality checks and ERPs
   link:  /workshop/madrid2019/tutorial_erp
 
