--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -172,6 +172,9 @@
 - name:  Details on the EEG language dataset
   link:  /workshop/madrid2019/eeg_language
 
+- name:  FieldTrip workshop in Madrid
+  link:  /workshop/madrid2019
+
 - name:  Cleaning and processing resting-state EEG
   link:  /workshop/madrid2019/tutorial_cleaning
 
@@ -181,6 +184,6 @@
 - name:  Time-frequency and spectral analysis
   link:  /workshop/madrid2019/tutorial_freq
 
-- name:  Cluster-based permutation tests on resting-state Power Spectral Density
+- name:  Cluster-based permutation tests on resting-state power spectra
   link:  /workshop/madrid2019/tutorial_stats
 
