--- a/_data/tag/eeg-chennu.yml
+++ b/_data/tag/eeg-chennu.yml
@@ -13,6 +13,6 @@
 - name:  Time-frequency and spectral analysis
   link:  /workshop/madrid2019/tutorial_freq
 
-- name:  Cluster-based permutation tests on resting-state power spectra
+- name:  Cluster-based permutation tests on resting-state EEG power spectra
   link:  /workshop/madrid2019/tutorial_stats
 
