--- a/_data/tag/bids.yml
+++ b/_data/tag/bids.yml
@@ -10,3 +10,6 @@
 - name:  How should I specify the coordinate systems in a BIDS dataset?
   link:  /faq/bids_coordsystem
 
+- name:  Convert to BIDS
+  link:  /workshop/madrid2019/convert_bids
+
