--- a/_data/tag/eeg-chennu.yml
+++ b/_data/tag/eeg-chennu.yml
@@ -1,6 +1,9 @@
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
+- name:  Convert to BIDS
+  link:  /workshop/madrid2019/convert_bids
+
 - name:  Details on the resting-state EEG dataset recorded with different sedation levels
   link:  /workshop/madrid2019/eeg_chennu
 
