--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -166,6 +166,9 @@
 - name:  FieldTrip Walkthrough
   link:  /walkthrough
 
+- name:  Convert to BIDS
+  link:  /workshop/madrid2019/convert_bids
+
 - name:  Details on the resting-state EEG dataset recorded with different sedation levels
   link:  /workshop/madrid2019/eeg_chennu
 
