--- a/_data/tag/eeg-language.yml
+++ b/_data/tag/eeg-language.yml
@@ -16,3 +16,6 @@
 - name:  Time-frequency and spectral analysis
   link:  /workshop/madrid2019/tutorial_freq
 
+- name:  FieldTrip workshop in Oslo
+  link:  /workshop/oslo2019
+
