--- a/_data/tag/eeg.yml
+++ b/_data/tag/eeg.yml
@@ -190,3 +190,6 @@
 - name:  Cluster-based permutation tests on resting-state EEG power spectra
   link:  /workshop/madrid2019/tutorial_stats
 
+- name:  FieldTrip workshop in Oslo
+  link:  /workshop/oslo2019
+
