--- a/_data/tag/continuous.yml
+++ b/_data/tag/continuous.yml
@@ -4,7 +4,7 @@
 - name:  How can I process continuous data without triggers?
   link:  /faq/how_can_i_process_continuous_data_without_triggers
 
-- name:  Preprocessing - Reading continuous EEG data
+- name:  Preprocessing - Reading continuous EEG and MEG data
   link:  /tutorial/continuous
 
 - name:  Extracting the brain state and events from continuous sleep EEG
