--- a/_data/tag/eeg-language.yml
+++ b/_data/tag/eeg-language.yml
@@ -1,7 +1,7 @@
 - name:  Which datasets are used in the documentation and where are they used?
   link:  /faq/what_types_of_datasets_and_their_respective_analyses_are_used_on_fieldtrip
 
-- name:  Preprocessing - Reading continuous EEG data
+- name:  Preprocessing - Reading continuous EEG and MEG data
   link:  /tutorial/continuous
 
 - name:  Details on the EEG language dataset
