--- a/_data/tag/meg-language.yml
+++ b/_data/tag/meg-language.yml
@@ -10,6 +10,9 @@
 - name:  Cluster-based permutation tests on event related fields
   link:  /tutorial/cluster_permutation_timelock
 
+- name:  Preprocessing - Reading continuous EEG and MEG data
+  link:  /tutorial/continuous
+
 - name:  Speeding up your analysis with distributed computing
   link:  /tutorial/distributedcomputing
 
