--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -112,6 +112,9 @@
 - name:  Extended analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivityextended
 
+- name:  Preprocessing - Reading continuous EEG and MEG data
+  link:  /tutorial/continuous
+
 - name:  Speeding up your analysis with distributed computing
   link:  /tutorial/distributedcomputing
 
