--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -37,7 +37,7 @@
 - name:  Analysis of sensor- and source-level connectivity
   link:  /tutorial/connectivity
 
-- name:  Preprocessing - Reading continuous EEG data
+- name:  Preprocessing - Reading continuous EEG and MEG data
   link:  /tutorial/continuous
 
 - name:  Speeding up your analysis with distributed computing
