--- a/_data/tag/eeg-language.yml
+++ b/_data/tag/eeg-language.yml
@@ -5,7 +5,7 @@
   link:  /tutorial/continuous
 
 - name:  Details on the EEG language dataset
-  link:  /workshop/madrid2019/eeg_language
+  link:  /tutorial/eeg_language
 
 - name:  FieldTrip workshop in Madrid
   link:  /workshop/madrid2019
