--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -151,6 +151,9 @@
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
+- name:  Classification of event related MEG data using MVPA-Light
+  link:  /tutorial/mvpa_light
+
 - name:  Trigger-based trial selection
   link:  /tutorial/preprocessing
 
