--- a/_data/tag/timelock.yml
+++ b/_data/tag/timelock.yml
@@ -25,6 +25,9 @@
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
+- name:  Classification of event related MEG data using MVPA-Light
+  link:  /tutorial/mvpa_light
+
 - name:  Preprocessing of EEG data and computing ERPs
   link:  /tutorial/preprocessing_erp
 
