--- a/_data/tag/tutorial.yml
+++ b/_data/tag/tutorial.yml
@@ -82,6 +82,9 @@
 - name:  Multivariate analysis of electrophysiological data
   link:  /tutorial/multivariateanalysis
 
+- name:  Classification of event related MEG data using MVPA-Light
+  link:  /tutorial/mvpa_light
+
 - name:  Whole brain connectivity and network analysis
   link:  /tutorial/networkanalysis
 
