--- a/_data/tag/neuromag.yml
+++ b/_data/tag/neuromag.yml
@@ -7,7 +7,7 @@
 - name:  How can I visualize the neuromag head position indicator coils?
   link:  /faq/how_can_i_visualize_the_neuromag_head_position_indicator_coils
 
-- name:  Why are there multiple neighbour templates for the NeuroMag306 system?
+- name:  Why are there multiple neighbour templates for the Neuromag306 system?
   link:  /faq/why_are_there_multiple_neighbour_templates_for_the_neuromag306_system
 
 - name:  Getting started with Elekta/Neuromag data
