--- a/_data/tag/template.yml
+++ b/_data/tag/template.yml
@@ -1,4 +1,4 @@
-- name:  Why are there multiple neighbour templates for the NeuroMag306 system?
+- name:  Why are there multiple neighbour templates for the Neuromag306 system?
   link:  /faq/why_are_there_multiple_neighbour_templates_for_the_neuromag306_system
 
 - name:  Anatomical templates for visualizing source reconstructed activity
