--- a/_data/tag/faq.yml
+++ b/_data/tag/faq.yml
@@ -316,9 +316,6 @@
 - name:  How to get started with the MATLAB distributed computing toolbox?
   link:  /faq/how_to_get_started_with_the_matlab_distributed_computing_toolbox
 
-- name:  How to perform a multiple sessions MEG experiment (CTF275 system)
-  link:  /faq/how_to_perform_a_multiple_sessions_meg_experiment_ctf275_system
-
 - name:  How to select the correct SPM toolbox?
   link:  /faq/how_to_select_the_correct_spm_toolbox
 
@@ -342,6 +339,9 @@
 
 - name:  In what way can frequency domain data be represented in FieldTrip?
   link:  /faq/in_what_way_can_frequency_domain_data_be_represented_in_fieldtrip
+
+- name:  Is it good or bad to have dipole locations outside of the brain for which the source reconstruction is computed?
+  link:  /faq/is_it_good_or_bad_to_have_dipole_locations_outside_of_the_brain_for_which_the_source_reconstruction_is_computed
 
 - name:  Is it important to have accurate measurements of electrode locations for EEG source reconstruction?
   link:  /faq/is_it_important_to_have_accurate_measurements_of_electrode_locations_for_eeg_source_reconstruction
@@ -421,7 +421,7 @@
 - name:  What are the different approaches I can take for distributed computing?
   link:  /faq/what_are_the_different_approaches_i_can_take_for_distributed_computing
 
-- name:  What are the different Neuromag and Yokogawa layouts good for?
+- name:  What are the different Neuromag/Elekta and Yokogawa layouts good for?
   link:  /faq/what_are_the_different_neuromag_and_yokogawa_layouts_good_for
 
 - name:  What convention is used to define absolute phase in 'mtmconvol', 'wavelet' and 'mtmfft'?
@@ -430,10 +430,13 @@
 - name:  What does a typical call to a FieldTrip function look like?
   link:  /faq/what_does_a_typical_call_to_a_fieldtrip_function_look_like
 
-- name:  What happens if a job fails to execute properly?
+- name:  What does "padding not sufficient for requested frequency resolution" mean?
+  link:  /faq/what_does_padding_not_sufficient_for_requested_frequency_resolution_mean
+
+- name:  What happens if a peer distributed job fails to execute properly?
   link:  /faq/what_happens_if_a_job_fails_to_execute_properly
 
-- name:  What happens with a job that has an error on the slave?
+- name:  What happens with a peer distributed job that has an error on the slave?
   link:  /faq/what_happens_with_a_job_that_has_an_error_on_the_slave
 
 - name:  What is the conductivity of the brain, CSF, skull and skin tissue?
@@ -490,7 +493,7 @@
 - name:  Why are the peers using multicast to announce themselves?
   link:  /faq/why_are_the_peers_using_multicast_to_announce_themselves
 
-- name:  Why are there multiple neighbour templates for the NeuroMag306 system?
+- name:  Why are there multiple neighbour templates for the Neuromag306 system?
   link:  /faq/why_are_there_multiple_neighbour_templates_for_the_neuromag306_system
 
 - name:  Why does my anatomical MRI show upside-down when plotting it with ft_sourceplot?
