--- a/_data/tag/freq.yml
+++ b/_data/tag/freq.yml
@@ -46,6 +46,9 @@
 - name:  What convention is used to define absolute phase in 'mtmconvol', 'wavelet' and 'mtmfft'?
   link:  /faq/what_convention_is_used_to_define_absolute_phase_in_mtmconvol_wavelet_and_mtmfft
 
+- name:  What does "padding not sufficient for requested frequency resolution" mean?
+  link:  /faq/what_does_padding_not_sufficient_for_requested_frequency_resolution_mean
+
 - name:  What kind of filters can I apply to my data?
   link:  /faq/what_kind_of_filters_can_i_apply_to_my_data
 
