--- a/_data/tag/warning.yml
+++ b/_data/tag/warning.yml
@@ -4,6 +4,6 @@
 - name:  Should I add FieldTrip with all subdirectories to my MATLAB path?
   link:  /faq/should_i_add_fieldtrip_with_all_subdirectories_to_my_matlab_path
 
-- name:  Why are there multiple neighbour templates for the NeuroMag306 system?
+- name:  Why are there multiple neighbour templates for the Neuromag306 system?
   link:  /faq/why_are_there_multiple_neighbour_templates_for_the_neuromag306_system
 
