--- a/_data/tag/meg.yml
+++ b/_data/tag/meg.yml
@@ -16,7 +16,7 @@
 - name:  Fit a dipole to the tactile ERF after mechanical stimulation
   link:  /example/fit_a_dipole_to_the_tactile_erf_after_mechanical_stimulation
 
-- name:  Fixing a missing sensor
+- name:  Fixing a missing channel
   link:  /example/fixing_a_missing_sensor
 
 - name:  Getting started with reading raw EEG or MEG data
@@ -169,11 +169,14 @@
 - name:  FieldTrip Walkthrough
   link:  /walkthrough
 
+- name:  Beamforming evoked fields and potentials in combined MEG/EEG data
+  link:  /workshop/aarhus/beamformingerf
+
 - name:  FieldTrip workshop in Aarhus
   link:  /workshop/aarhus2015
 
-- name:  Beamforming evoked fields and potentials in combined MEG/EEG data
-  link:  /workshop/aarhus/beamformingerf
+- name:  MEG-UK 2015 meeting
+  link:  /workshop/meg-uk-2015
 
 - name:  Face recognition dataset
   link:  /workshop/meg-uk-2015/dataset
@@ -190,23 +193,20 @@
 - name:  FieldTrip stats demo
   link:  /workshop/meg-uk-2015/fieldtrip-stats-demo
 
-- name:  MEG-UK 2015 meeting
-  link:  /workshop/meg-uk-2015
-
 - name:  SPM Source reconstruction demo
   link:  /workshop/meg-uk-2015/spm_source
 
 - name:  SPM Sensor-level stats demo
   link:  /workshop/meg-uk-2015/spm_stats
 
+- name:  FieldTrip course at the NatMEG in Stockholm
+  link:  /workshop/natmeg
+
 - name:  Beamforming oscillatory responses in combined MEG/EEG data
   link:  /workshop/natmeg/beamforming
 
 - name:  Dipole fitting of combined MEG/EEG data
   link:  /workshop/natmeg/dipolefitting
-
-- name:  FieldTrip course at the NatMEG in Stockholm
-  link:  /workshop/natmeg
 
 - name:  Details of the auditory oddball MEG dataset
   link:  /workshop/natmeg/meg_audodd
